# simplify

./: .gitignore  CMakeLists.txt  simplify.cbp  simplify.depend  simplify.layout
src/: main.cpp
